--- a/static/signedin.html
+++ b/static/signedin.html
@@ -45,10 +45,10 @@
             Tap here to find activities to burn more calories.
           </a>
 
-            <form action="javascript:dummyData()">
+<!--             <form action="javascript:dummyData()">
     <button type="submit">Make goals unreached</button>
   </form>
-        </div>
+        </div> -->
      <!--  </div> -->
 
 
